@@ -1440,6 +1440,7 @@
     { @"entries.0.lastModifiedBy.name", @"Fred Flintstone"},
     { @"entries.0.quotaBytesUsed", @"12345"},
     { @"entries.0.documentDescription", @"cherry soda"},
+    { @"entries.0.MD5Checksum", @"2b01142f7481c7b056c4b410d28f33cf"},
     { @"entries.0.isHidden", @"1"},
 
     { @"entries.1.className", @"GDataEntrySpreadsheetDoc" },
